--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -12,10 +12,17 @@
     <li><%= link_to product.title, "https://#{@shop_session.url}/admin/products/#{product.id}", target: "_top" %></li>
   <% end %>
 </ul>
+<h2>Orders</h2>
+
+<ul>
+  <% @orders.each do |order| %>
+    <li><%= link_to order.orderNumber, "https://#{@shop_session.url}/admin/orders/#{order.id}", target: "_top" %></li>
+  <% end %>
+</ul>
 
 <hr>
 
-<h2>Webhooks</h2>
+<!-- <h2>Webhooks</h2>
 
 <% if @webhooks.present? %>
   <ul>
@@ -26,3 +33,4 @@
 <% else %>
   <p>This app has not created any webhooks for this Shop. Add webhooks to your ShopifyApp initializer if you need webhooks</p>
 <% end %>
+ -->
