--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,21 +5,89 @@
     });
   </script>
 <% end %>
+<style type="text/css">
+  
+  table, th, td {
+    text-align: left;
+    border: 1px solid black;
+    width: auto;
+}
 
+table, th{
+  text-align: center;
+    border-collapse: collapse;
+}
+
+</style>
 <center> <h1>The Baskets Group </h1></center>
-<h2>Products</h2>
 
-<ul>
-  <% @products.each do |product| %>
-    <li><%= link_to product.title, "https://#{@shop_session.url}/admin/products/#{product.id}", target: "_top" %></li>
-  <% end %>
-</ul>
+ 
 <h2>Orders</h2>
+<table >
+  
+  <tbody >
+    <tr ><th>Sr.No </th><th style="width: 200px;">Order Number </th><th>Total Ammount </th><th>Tags</th> <th>Fulfillment Status</th></tr>
+
+  <% @orders.each do |o| %>
+   <tr>   
+     <td> <input type="checkbox" name="vehicle" value="https://#{@shop_session.url}/admin/products/#{product.id}"> </td> 
+     <td> <%= link_to o.order_number, "https://#{@shop_session.url}/admin/orders/#{o.id}", target: "_top" %> </td>
+
+          
+     <td> <%=  o.total_price %> </td>
+     <td> <%=   o.tags %> </td>
+    
+         
+        <td>
+      <% if o.fulfillment_status == "fulfilled"%>
+       <%=  o.fulfillment_status %> 
+     <% else %>
+     
+    <%= "Not fulfilled" %> 
+    
+    <% end %>
+      </td>  
+
+    
+      
+  </tr
+
+   
+  <% end %>
+
+    
+</ul>
+ 
+ <h2>Products</h2>
+<table >
+  
+  <tbody >
+    <tr ><th>Check</th><th style="width: 200px;">Number</th><th>Title</th><th>Tags</th></tr>
+
+ 
+ 
+  <% @products.each do |product| %>
+
+     <tr><td> <input type="checkbox" name="vehicle" value="https://#{@shop_session.url}/admin/products/#{product.id}"> </td> 
 
 
-<hr>
+    <td> <%= link_to product.id, "https://#{@shop_session.url}/admin/products/#{product.id}", target: "_top" %> </td>
 
-<!-- <h2>Webhooks</h2>
+   <td><%= link_to product.title, "https://#{@shop_session.url}/admin/products/#{product.title}", target: "_top" %></td>
+
+ <td><%= link_to product.tags, "https://#{@shop_session.url}/admin/products/#{product.tags}", target: "_top" %></td>
+
+  
+ </tr>
+  <% end %>
+ 
+
+ </tbody>
+</table>
+ 
+ 
+<!-- 
+  <h2>Webhooks</h2>
 
 <% if @webhooks.present? %>
   <ul>
@@ -30,4 +98,4 @@
 <% else %>
   <p>This app has not created any webhooks for this Shop. Add webhooks to your ShopifyApp initializer if you need webhooks</p>
 <% end %>
- -->
+  -->
