table for fraud check

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -34,7 +34,7 @@ table, td{
 table, th{
   text-align: center;
     border-collapse: collapse;
-    font-family: Arial;
+    font-family: Arial Narrow;
 }
 
 .circle_red {
