--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -57,6 +57,16 @@ table, th{
   /* width and height can be anything, as long as they're equal */
 }
 
+.circle_yellow {
+  border-radius: 50%;
+  width: 20px;
+  height: 20px; 
+    background-color: yellow;
+    border-radius: transperant; 
+    margin: auto;
+  /* width and height can be anything, as long as they're equal */
+}
+
 </style>
 <center> <h1>The Baskets Group </h1></center>
 
@@ -68,7 +78,7 @@ table, th{
     <tr style="border-bottom-style: solid;">
 
       <!-- <th >Select </th> -->
-      <th style="width: 100px; margin-left:20px;">Order </th><th style=" padding: 20px;">Total </th><th style=" padding: 20px;">Tags</th> <th style="width: 100px; padding: 20px;">Fulfillment</th><th style="width: 100px; padding: 20px;">Fraud</th></tr>
+      <th style="width: 100px; margin-left:20px;">Order </th><th style=" padding: 20px;">Total </th><th style=" padding: 20px;">Tags</th> <th style="width: 100px; padding: 20px;">Fulfillment</th><th style="width: 100px; padding: 20px;">Fraud</th><th style="width: 100px; padding: 20px;">Financial</th></tr>
 
   <% @orders.each do |o| %>
 
@@ -104,7 +114,18 @@ table, th{
 <% end %>
   </td> 
 
-
+<td>
+    
+    <% if o.financial_status.include?  "unpaid"%>
+       
+      <div class="circle_red"></div>
+    <% elsif o.financial_status.include?  "paid" %>
+    <div class="circle_green"></div>
+    <%else%>
+    <div class="circle_yellow"></div>
+     
+<% end %>
+  </td> 
 
   </tr>
 
