app name changed Hazelton's Order Dashboard

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -68,7 +68,7 @@ table, th{
 }
 
 </style>
-<center> <h1>The Baskets Group </h1></center>
+<center> <h1>Hazelton's Order Dashboard </h1></center>
 
  <div class="table-css">
  
