app name changed Hazelton's Order Dashboard

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -34,7 +34,7 @@ table, td{
 table, th{
   text-align: center;
     border-collapse: collapse;
-    font-family: Arial Narrow;
+    font-family: Arial;
 }
 
 .circle_red {
@@ -68,7 +68,7 @@ table, th{
 }
 
 </style>
-<center> <h1>Hazeltons | Canada - Orders </h1></center>
+<center> <h1 style="font-family: Arial;">Hazelton's | Canada - Orders </h1></center>
 
  <div class="table-css">
  
