--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -136,7 +136,18 @@ table, th{
      
       <% end %>
   </td>
-
+<td>
+    
+    <% if o.status.include?  "open"%>
+       
+      <div class="circle_red"></div>
+    <% elsif o.status.include?  "closed" %>
+    <div class="circle_green"></div>
+    <%else%>
+    <div class="circle_yellow"></div>
+     
+      <% end %>
+  </td>
  
 
   </tr>
