order status added

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -95,7 +95,7 @@ table, th{
    <tr> 
 
      <!-- <td> <input type="checkbox" name="vehicle" value="https://#{@shop_session.url}/admin/products/#{product.id}"> </td>  -->
-     <td style="text-align: left; padding-left: 20px;"> <%= link_to o.order_number, "https://#{@shop_session.url}/admin/orders/#{o.id}", target: "_blank" %> </td>
+     <td style="text-align: left; padding-left: 20px; style="text-decoration: none; border-bottom: 1px solid white;"">  <%= link_to o.order_number, "https://#{@shop_session.url}/admin/orders/#{o.id}", target: "_blank" %> </td>
 
           
      <td>$ <%=  o.total_price %> </td>
