Card Column added

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -88,7 +88,7 @@ table, th{
     <tr style="border-bottom-style: solid;">
 
       <!-- <th >Select </th> -->
-      <th style="width: 100px; margin-left:20px;">Order </th><th style=" padding: 20px;">Total </th><th style=" padding: 20px;">Tags</th> <th style="width: 100px; padding: 20px;">Fulfillment</th><th style="width: 100px; padding: 20px;">Fraud</th><th style="width: 100px; padding: 20px;">Paid</th><th style="width: 100px; padding: 20px;">Note</th></tr>
+      <th style="width: 100px; margin-left:20px;">Order </th><th style=" padding: 20px;">Total </th><th style=" padding: 20px;">Tags</th> <th style="width: 100px; padding: 20px;">Fulfillment</th><th style="width: 100px; padding: 20px;">Fraud</th><th style="width: 100px; padding: 20px;">Paid</th><th style="width: 100px; padding: 20px;">Card</th></tr>
 
   <% @orders.each do |o| %>
 
