--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -76,100 +76,88 @@ table, th{
     margin: auto;
   /* width and height can be anything, as long as they're equal */
 }
-
+.dataTables_filter input { width: 50px }
+.width35{width: 350px}
 </style>
+
 <center> <h1 style="font-family: Arial;">Hazelton's | Canada - Orders </h1></center>
 
- <div class="table-css">
- 
-<table >
+ <div class="table-css ">
   
-  <tbody >
-    <tr style="border-bottom-style: solid;">
-
-      <!-- <th >Select </th> -->
-      <th style="width: 100px; margin-left:20px;">Order </th><th style=" padding: 20px;">Total </th><th style=" padding: 20px;">Tags</th> <th style="width: 100px; padding: 20px;">Fulfillment</th><th style="width: 100px; padding: 20px;">Fraud</th><th style="width: 100px; padding: 20px;">Paid</th><th style="width: 100px; padding: 20px;">Card</th></tr>
-
+  
+   
+<table id="table_id" class="display">
+   <thead>
+    <tr>
+      <th>Order </th>
+      <th>Total </th>
+      <th>Tags</th>
+      <th>Fulfillment</th>
+      <th>Fraud</th>
+      <th>Paid</th>
+      <th>Card</th>
+      <th>Tracking Number</th>
+    </tr>
+  </thead>
+  <tbody>
   <% @orders.each do |o| %>
 
-   <tr> 
-
+    <tr> 
      <!-- <td> <input type="checkbox" name="vehicle" value="https://#{@shop_session.url}/admin/products/#{product.id}"> </td>  -->
-     <td style="text-align: left; padding-left: 20px; ">  <%= link_to o.order_number, "https://#{@shop_session.url}/admin/orders/#{o.id}", target: "_blank" %> </td>
-
-          
-     <td>$ <%=  o.total_price %> </td>
-     <td style="text-align: left; padding-left: 50px;"> <%=   o.tags %> </td>
-    
-         
-        <td>
+      <td style="text-align: left; padding-left: 20px; "><%= link_to o.order_number, "https://#{@shop_session.url}/admin/orders/#{o.id}", target: "_blank" %> </td>
+      <td>$ <%=  o.total_price %> </td>
+      <td style="text-align: left; padding-left: 50px;"> <%=   o.tags %> </td>
+      <td>
       <% if o.fulfillment_status == "fulfilled"%>
        <div class="circle_green"></div>
-     <% else %>
-     
-    <div class="circle_red"></div> 
-    
-    <% end %>
-      </td>  
-
-  <td>
-    
-    <% if o.tags.include?  "ufc"%>
-       
-      <div class="circle_red"></div>
-    <% else %>
-    <div class="circle_green"></div>
-     
-<% end %>
-  </td> 
-
-<td>
-    
-    <% if o.financial_status.include?  "unpaid"%>
-       
-      <div class="circle_red"></div>
-    <% elsif o.financial_status.include?  "paid" %>
-    <div class="circle_green"></div>
-    <%else%>
-    <div class="circle_yellow"></div>
-     
+      <% else %>
+      <div class="circle_red"></div> 
       <% end %>
-  </td>
-<td>
-    
-    <% if o.note != ""%>
+      </td>  
+      <td>
+      <% if o.tags.include?  "ufc"%>
+      <div class="circle_red"></div>
+      <% else %>
+      <div class="circle_green"></div>
+      <% end %>
+      </td> 
+      <td>
+      <% if o.financial_status.include?  "unpaid"%>
+      <div class="circle_red"></div>
+      <% elsif o.financial_status.include?  "paid" %>
+      <div class="circle_green"></div>
+      <%else%>
+      <div class="circle_yellow"></div>
+      <% end %>
+      </td>
+      <td>
+      <% if o.note != ""%>
        <div class="circle_green"></div>
-     <% else %>
-     
-    <div class="circle_red"></div> 
- <% end %>
-       
-    
-  </td>
- 
+      <% else %>
+      <div class="circle_red"></div> 
+      <% end %>
+      </td>
+      <td>
+        <% unless o.fulfillments[0].nil? %>
+         <% unless o.fulfillments[0].tracking_number.nil? %>
+        <%= o.fulfillments[0].tracking_number  %>
+        <% end %>
+         <% end %> 
 
-  </tr>
+        </td>
 
-   
-  <% end %>
-
-    
-</ul>
- 
- </tbody>
-</table>
+      </tr>
+      <% end %>
+    </tbody>
+  </table>
 </div>
- 
-<!-- 
-  <h2>Webhooks</h2>
 
-<% if @webhooks.present? %>
-  <ul>
-    <% @webhooks.each do |webhook| %>
-      <li><%= webhook.topic %> : <%= webhook.address %></li>
-    <% end %>
-  </ul>
-<% else %>
-  <p>This app has not created any webhooks for this Shop. Add webhooks to your ShopifyApp initializer if you need webhooks</p>
-<% end %>
-  -->
+<script>
+  
+$(document).ready( function () {
+    $('#table_id').DataTable();
+    $('input[type="search"]').addClass('width35');
+} );
+
+
+</script>
