--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -90,6 +90,9 @@ table, th{
    <thead>
     <tr>
       <th>Order </th>
+      <th>Name </th>
+      <th>Zip Code </th>
+      <th style="display: none;">Note</th>
       <th>Total </th>
       <th>Tags</th>
       <th>Fulfillment</th>
@@ -105,6 +108,25 @@ table, th{
     <tr> 
      <!-- <td> <input type="checkbox" name="vehicle" value="https://#{@shop_session.url}/admin/products/#{product.id}"> </td>  -->
       <td style="text-align: left; padding-left: 20px; "><%= link_to o.order_number, "https://#{@shop_session.url}/admin/orders/#{o.id}", target: "_blank" %> </td>
+
+      <td>
+         <% unless o.shipping_address.nil? %>
+          <% unless o.shipping_address.first_name.nil? %>
+         <%=  o.shipping_address.first_name %>
+         <% end %>
+         <% end %>
+
+        </td>
+      <td>
+        <% unless o.shipping_address.nil? %>
+        
+        <% unless o.shipping_address.zip.nil? %>
+        <%=  o.shipping_address.zip %>
+        <% end %>
+        <% end %>
+
+        </td>
+      <td style="display: none;"><%=  o.note %></td>
       <td>$ <%=  o.total_price %> </td>
       <td style="text-align: left; padding-left: 50px;"> <%=   o.tags %> </td>
       <td>
